<resources>
    <string name="app_name">HealthCare</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Health Care</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="add_exercise">Adauga exercitiu</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Sterge</string>
    <string name="name">Nume</string>
    <string name="sets">Numar seturi</string>
    <string name="reps">Numar repetitii</string>
    <string name="set_duration">Set Duration</string>
    <string name="break_duration">Pauza</string>
    <string name="description">Descriere</string>

    <string name="add_program">Adauga program</string>
    <string name="select_exercises">Selecteaza exercitii</string>
    <string name="select_days">Selecteaza zilele</string>

    <string name="add_event">Adauga eveniment</string>
    <string name="interval">Interval</string>


    <string name="no_program">Niciun program selectat</string>
    <string name="break_text">Pauza</string>
    <string name="active">Activ</string>

    <string name="time">Timp</string>

    <!-- Text To Speech -->
    <string name="starting_program">Starting Program</string>
    <string name="end_program">Program Over</string>
    <string name="exercise_tts">%d sets of %d reps</string>
    <string name="start_tts">Start</string>
    <string name="stop_tts">Stop</string>
    <string name="language">Limba</string>
    <string name="tts_frequence">Frecventa</string>
    <string name="pitch">Ton</string>

    <!-- Settings -->
    <string name="workout">Workout</string>
    <string name="tts">Text To Speech</string>
    <string name="program_tts">Program</string>
    <string name="reps_tts">Repetari</string>
    <string name="set">Set</string>

    <string name="select_program">Selecteaza Program</string>

    <string name="no_programs">Niciun program</string>
    <string name="no_exercise">Niciun exercitiu</string>
    <string name="no_event">Niciun eveniment</string>
    <string name="no_recipe">Nicio reteta</string>


</resources>
