<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/title_color">

    <!-- Nume -->
    <EditText
        android:id="@+id/nameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:textSize="16dp"
        android:hint="@string/name"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="7dp"/>

    <!-- Descriere -->
    <EditText
        android:id="@+id/descriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameTextView"
        android:layout_marginTop="4dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="5dp"
        android:hint="@string/description"
        android:textColor="@android:color/black"
        android:textSize="16dp" />

    <!-- Interval -->
    <EditText
        android:id="@+id/intervalTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descriptionTextView"
        android:layout_marginTop="4dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="5dp"
        android:hint="@string/interval"
        android:textColor="@android:color/black"
        android:textSize="16dp"
        android:inputType="number"/>

    <!-- Activ -->
    <CheckBox android:id="@+id/activeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/intervalTextView"
        android:layout_marginTop="4dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="5dp"
        android:textColor="@android:color/black"
        android:textSize="16dp"
        android:layout_alignParentEnd="true"
        android:hint="@string/active" />

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activeCheckBox"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/delete"
            android:textColor="@android:color/holo_red_dark"/>

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@android:color/black"
            />

        <Button
            android:id="@+id/okButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textColor="@android:color/black" />
    </LinearLayout>

</RelativeLayout>