<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog_background">

    <!-- Exercise image -->
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imageView"
        android:background="@android:color/transparent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:src="@drawable/ic_photo"/>

    <!-- Name -->
    <EditText
        android:id="@+id/nameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:textSize="16dp"
        android:hint="@string/name"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="7dp"/>

    <!-- Sets -->
    <EditText
        android:id="@+id/setsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameTextView"
        android:layout_marginTop="4dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="5dp"
        android:hint="@string/sets"
        android:textColor="@android:color/black"
        android:textSize="16dp"
        android:inputType="number"/>

    <!-- Reps -->
    <EditText
        android:id="@+id/repsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setsTextView"
        android:layout_marginTop="4dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="5dp"
        android:hint="@string/reps"
        android:textColor="@android:color/black"
        android:textSize="16dp"
        android:inputType="number"/>

    <!-- Break -->
    <EditText
        android:id="@+id/breakTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/repsTextView"
        android:layout_marginTop="4dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="5dp"
        android:hint="@string/break_text"
        android:textColor="@android:color/black"
        android:textSize="16dp"
        android:inputType="number"/>

    <!-- Description -->
    <EditText
        android:id="@+id/descriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/breakTextView"
        android:layout_marginTop="4dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="5dp"
        android:hint="@string/description"
        android:textColor="@android:color/black"
        android:textSize="16dp" />

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descriptionTextView"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/delete"
            android:textColor="@android:color/holo_red_dark"/>

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@android:color/black"
            />

        <Button
            android:id="@+id/okButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textColor="@android:color/black" />
    </LinearLayout>

</RelativeLayout>