<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/list_item_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/eventNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:hint="@string/name"
        android:textColor="@android:color/white"
        android:textSize="17dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/eventDescriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/eventNameText"
        android:hint="@string/description"
        android:textColor="@android:color/black"
        android:textSize="13dp"
        android:textStyle="bold"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/eventIntervalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/eventDescriptionText"
        android:hint="@string/interval"
        android:textColor="@android:color/black"
        android:textSize="13dp"
        android:textStyle="bold"
        android:inputType="number"
        android:layout_marginTop="4dp"/>

    <CheckBox
        android:id="@+id/active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:text="@string/active"
        android:focusable="false"/>

</RelativeLayout>