<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText android:id="@+id/programNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp" />

    <TextView android:id="@+id/exercisesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/programNameText"
        android:layout_margin="10dp"
        android:text="@string/select_exercises"/>

    <ListView android:id="@+id/addExerciseList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/exercisesTextView"
        android:layout_above="@+id/buttonsLayout"/>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonsLayout"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_alignParentBottom="true">

        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/cancelButton"
            android:text="@string/cancel"
            android:layout_margin="10dp"/>

        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/okButton"
            android:text="@string/ok"
            android:layout_margin="10dp"/>
    </LinearLayout>

</RelativeLayout>