<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Name -->
    <EditText android:id="@+id/programNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp" />

    <!-- Exercises -->
    <TextView android:id="@+id/exercisesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/programNameText"
        android:layout_margin="10dp"
        android:text="@string/select_exercises"/>

    <ListView android:id="@+id/addExerciseList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/exercisesTextView"
        android:layout_above="@id/daysTextView"/>

    <!-- Days -->
    <TextView android:id="@+id/daysTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/daysLayout"
        android:layout_margin="10dp"
        android:text="@string/select_days"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/daysLayout"
        android:layout_above="@+id/buttonsLayout"
        android:orientation="horizontal"
        android:weightSum="7">

        <!-- Monday -->
        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/monday"
            android:text="Mo"
            android:textSize="10dp"
            android:tag="1"
            android:layout_margin="1dp"/>

        <!-- Tuesday -->
        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/tuesday"
            android:text="Tu"
            android:textSize="10dp"
            android:tag="2"
            android:layout_margin="1dp"/>

        <!-- Wednesday -->
        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/wednesday"
            android:text="We"
            android:textSize="10dp"
            android:tag="3"
            android:layout_margin="1dp"/>

        <!-- Thursday -->
        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/thursday"
            android:text="Th"
            android:textSize="10dp"
            android:tag="4"
            android:layout_margin="1dp"/>

        <!-- Friday -->
        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/friday"
            android:text="Fr"
            android:textSize="10dp"
            android:tag="5"
            android:layout_margin="1dp"/>

        <!-- Satuday -->
        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/saturday"
            android:text="Sa"
            android:textSize="10dp"
            android:tag="6"
            android:layout_margin="1dp"/>

        <!-- Sunday -->
        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/sunday"
            android:text="Su"
            android:textSize="10dp"
            android:tag="7"
            android:layout_marginTop="1dp"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonsLayout"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_alignParentBottom="true">

        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/deleteButton"
            android:text="@string/delete"
            android:layout_margin="5dp"/>

        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/cancelButton"
            android:text="@string/cancel"
            android:layout_margin="5dp"/>

        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/okButton"
            android:text="@string/ok"
            android:layout_margin="5dp"/>
    </LinearLayout>

</RelativeLayout>