<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Exercise image -->
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/imageView"
        android:background="@android:color/transparent"
        android:layout_centerVertical="true"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:src="@drawable/ic_photo"/>

    <!-- Name -->
    <EditText
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/imageView"
        android:textColor="@android:color/white"
        android:textSize="17dp"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="7dp"/>

    <!-- Time -->
    <EditText
        android:id="@+id/timeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameTextView"
        android:layout_toEndOf="@+id/imageView"
        android:layout_marginTop="4dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="5dp"
        android:textColor="@android:color/black"
        android:textSize="13dp" />

    <!-- Description -->
    <EditText
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timeTextView"
        android:layout_marginTop="4dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="5dp"
        android:layout_toEndOf="@+id/imageView"
        android:textColor="@android:color/black"
        android:textSize="13dp" />

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/delete"
            android:textColor="@android:color/holo_red_dark"/>

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@android:color/black"
            />

        <Button
            android:id="@+id/okButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textColor="@android:color/black" />
    </LinearLayout>

</RelativeLayout>