<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_background"
    android:id="@+id/root_layout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/currentProgramLayout"
        android:visibility="gone">

        <!-- Program -->
        <TextView
            android:id="@+id/programText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:textSize="17dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="Program"
            android:shadowColor="@android:color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"/>

        <!-- Exercise -->
        <TextView
            android:id="@+id/exerciseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/programText"
            android:layout_marginStart="15dp"
            android:layout_marginTop="4dp"
            android:textSize="17dp"
            android:textStyle="bold"
            android:text="Exercise"
            android:textColor="@android:color/white"
            android:shadowColor="@android:color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"/>


        <!-- Set number-->
        <TextView
            android:id="@+id/setText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/exerciseText"
            android:layout_alignParentStart="true"
            android:textSize="17dp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_marginStart="15dp"
            android:layout_marginTop="3dp"
            android:text="Set 1/5"
            android:shadowColor="@android:color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"/>

        <!-- Current Rep/Break-->
        <TextView
            android:id="@+id/currentRep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/break_text"
            android:textSize="19dp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_marginEnd="5dp"
            android:shadowColor="@android:color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"/>

        <LinearLayout
            android:id="@+id/controlsLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            android:layout_marginEnd="0dp">

            <ImageView
                android:id="@+id/prevButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="7dp"
                android:src="@drawable/ic_previous" />

            <ImageView
                android:id="@+id/playButton"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/ic_play" />

            <ImageView
                android:id="@+id/nextButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="7dp"
                android:src="@drawable/ic_next" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/noProgramLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/noProgramText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:text="@string/no_program"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:shadowColor="@android:color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"/>

        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/selectProgramBtn"
            android:text="@string/select_program"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/noProgramText"
            android:layout_marginTop="5dp"/>
    </RelativeLayout>

</RelativeLayout>